gobmkida/c1/does_capture_something
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/does_capture_something/src/engine/board.c:3065:30: error: use of undeclared identifier 'byte_9AA89F'
if ( v2 != ( unsigned __int8)byte_9AA89F[pos] 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/does_capture_something/src/engine/board.c:3068:30: error: use of undeclared identifier 'byte_9AA88C'
if ( v2 != ( unsigned __int8)byte_9AA88C[pos] 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/does_capture_something/src/obj/1/board.o] Error 1
